# diepio-clone

./: .gitignore  LICENSE  README
client/client-wasm/: Cargo.toml  LICENSE_MIT
client/client-wasm/src/: lib.rs
client/frontend/: index.html  package.json  vite.config.ts
client/frontend/src/components/: HelloWorld.vue
server/: Cargo.toml  physics.md
server/src/: app.rs  components.rs  config.json5  main.rs  net.rs  players.rs  systems.rs  tank_defs.json5
server/src/types/: config.rs  mod.rs  shape_defs.rs  tank_defs.rs
