[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
bevy_ecs = { version = "0.17.3", features = ["bevy_reflect"] }
bevy_replicon = "0.36.1"
bincode = "2.0.1"
config = { version = "0.15.19", features = ["toml", "json5"] }
flume = "0.11.1"
once_cell = "1.21.3"
parking_lot = "0.12.5"
rapier2d = "0.31.0"
rater = "0.1.1"
serde_json5 = "0.2.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = "1.18.1"
serde = { version = "1", features = ["derive"] }
