[package]
name = "server-new"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = [
    "http1",
    "http2",
    "json",
    "ws",
    "form",
    "tokio",
]}
bincode = { version = "2.0.1", features = ["serde"] }
config = { version = "0.15.19", features = ["json", "toml"] }
flume = "0.11.1"
futures-util = "0.3.31"
hecs = "0.10.5"
once_cell = "1.21.3"
parking_lot = "0.12.5"
quadtree_rs = "0.1.3"
rapier2d = { version = "0.31.0", features = [
    "dim2",
    "f32",
    "parallel",
] }
rater = "0.1.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json5 = "0.2.1"
tokio = { version = "1.48.0", features = [
    "full",
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "fs",
    "time",
]}
tokio-stream = "0.1.17"
tracing = { version = "0.1.43", features = ["attributes"] }
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "ansi",
]}
uuid = { version = "1.18.1", features = ["v4", "serde"] }
